Cart wasn't showing up on small screen, fixed

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -123,10 +123,6 @@
         padding: 1rem;
     }
 
-    .app__navbar-login {
-        display: none;
-    }
-
     .app__navbar-logo img {
         width: 110px;
     }
